Fixed text shifting during switch from dark-mode to light-mode (implemented simple container, set width). Changed sidebar to be click toggle instead of hover/mousin-mouseout.

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -1,6 +1,7 @@
 .container {
     display: flex;
     flex-direction: row;
+    background-color:#f5f5f5;
 }
 
 .toggle-sidebar-btn {
@@ -18,11 +19,13 @@
     display:flex;
     justify-content: flex-end;
     align-items: center;
-    font-family: "Roboto", sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 349;
     overflow:hidden;
     &.collapsed {
         width: 0;
         opacity: 0;
+
     }
 }
 
@@ -63,9 +66,11 @@
 
 .arrow-container{
     position:absolute;
+    background-color: #f5f5f5;
     left:0; // Adjust this value to position the arrow icon on the left edge of the page
     height: 60px;
     width: 2.4rem;
+    transition: width 0.3s ease-in-out, opacity 0.5s ease-in-out, background-color 0.5s ease, color 0.5s ease;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -111,4 +116,9 @@
   
 .dark-mode .arrow-icon:hover {
     color: #007bff;
+}
+
+.theme-icon {
+    width:1rem;
+    display:inline-block;
 }
